# ur5_simulation

./: CMakeLists.txt  README.md  package.xml
config/: ur_controllers_1.yaml  ur_multi_controller.yaml
config/ur5/: ur_controllers.yaml  visual_parameters.yaml
config/ur5e/: ur_controllers.yaml
griper_control/: CMakeLists.txt  package.xml
include/: config.txt  functions.hpp  ur5.urdf  ur5e.urdf
launch/: output_data.txt  output_data2.txt  output_data3.txt  ur_multi_sim.launch.py  ur_sim_control.launch.py  view_ur.launch.py
meshes/ur5/visual/: wrist3.dae
rviz/: view_robot.rviz  view_robot_orginal.rviz
src/: graficas.py  gripper.cpp  torque.cpp  ur5_ik_node.cpp  ur5_impedance.cpp
torque_geo_ur/: CMakeLists.txt  package.xml
torque_geo_ur/src/: torque.cpp
ur5_dynamics_pinocchio/: CMakeLists.txt  package.xml  readme
ur5_dynamics_pinocchio/configs/: control_params.yaml  joint_config.yaml
ur5_dynamics_pinocchio/include/ur5_dynamics_pinocchio/: yaml_loader.hpp
ur5_dynamics_pinocchio/launch/: control.launch.py
ur5_dynamics_pinocchio/src/: plot_data_smc.py  ur5_dynamics_node copy.cpp  ur5_dynamics_node.cpp
ur5_simulation/: CMakeLists.txt
ur5_simulation/config/: ur_controllers1.yaml
ur5_simulation/config/ur5e/: visual_parameters.yaml
ur5_simulation/include/: config.txt  functions.hpp  ur5.urdf  ur5e.urdf
ur5_simulation/launch/: output_data_esfuerzo.txt  output_data_impedancia.txt  output_data_velocidad.txt  singular.launch.py
ur5_simulation/rviz/: view_robot.rviz  view_robot_orginal.rviz
ur5_simulation/src/: gripper.cpp  ur5_ik_node.cpp  ur5_impedance.cpp
ur5_simulation/urdf/: ur2.urdf.xacro  ur_macro.xacro
urdf/: ur.urdf.xacro  ur_macro.xacro
