<?xml version="1.0"?>
<package format="3">
  <name>ur5_dynamics_pinocchio</name>
  <version>0.0.0</version>
  <description>Pinocchio-based dynamics computation for the UR5 robot</description>
  <maintainer email="rodrigovp2112@gmail.com">rdutec</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pinocchio</depend>
  <depend>eigen</depend>
  <depend>ament_index_cpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
